--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image" href="/logo.png" />
-    <title>Progress Works Gym</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image" href="/logo.avif" />
+
+  <!-- 🌟 Open Graph for WhatsApp / Facebook / Instagram -->
+  <meta property="og:title" content="Progress Works Gym" />
+  <meta property="og:description"
+    content="Professional mobile car body repair. We fix scratches, dents, wheels, headlights, bumper scuffs and more. High-quality work at your location." />
+  <meta property="og:image" content="/logo.avif" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://progressworksgym.com/" />
+  <meta property="og:site_name" content="Progress Works Gym" />
+
+  <!-- 🌟 Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Progress Works Gym" />
+  <meta name="twitter:description"
+    content="Professional mobile car body repair — dents, scratches, wheels, headlights and more." />
+  <meta name="twitter:image" content="/logo.avif" />
+  <title>Progress Works Gym</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
