--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- 🌟 Open Graph for WhatsApp / Facebook / Instagram -->
   <meta property="og:title" content="Progress Works Gym" />
   <meta property="og:description"
-    content="Professional mobile car body repair. We fix scratches, dents, wheels, headlights, bumper scuffs and more. High-quality work at your location." />
+    content="Building strength, discipline, and community. Join our family and start your fitness journey today." />
   <meta property="og:image" content="/logo.avif" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://progressworksgym.com/" />
