--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Progress Works Gym" />
   <meta name="twitter:description"
-    content="Professional mobile car body repair — dents, scratches, wheels, headlights and more." />
+    content="Building strength, discipline, and community. Join our family and start your fitness journey today." />
   <meta name="twitter:image" content="/logo.avif" />
   <title>Progress Works Gym</title>
 </head>
